Fix add senior and add caregiver commands